force-app/main/default/objects/LoggedInPlayer__c/LoggedInPlayer__c.object-meta.xml
<CustomObject>
    <label>LoggedInPlayer</label>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoggedInPlayers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>