force-app/main/default/objects/LoggedInPlayer__c/fields/Challenged_By__c.field-meta.xml
<CustomField>
    <fullName>Challenged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LoggedInPlayers1</relationshipName>
    <type>Lookup</type>
</CustomField>