force-app/main/default/objects/LoggedInPlayer__c/fields/Challenged_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Challenged_By_Name__c</fullName>
    <formula>Challenged_By__r.FirstName + &#39; &#39; +  Challenged_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenged By Name</label>
    <type>Text</type>
</CustomField>