force-app/main/default/objects/LoggedInPlayer__c/fields/Player_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_Name__c</fullName>
    <formula>User__r.FirstName + &#39; &#39; +  User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Player Name</label>
    <type>Text</type>
</CustomField>