force-app/main/default/objects/LoggedInPlayer__c/fields/Player_Status__c.field-meta.xml
<CustomField>
    <fullName>Player_Status__c</fullName>
    <formula>if(Last_Seen__c &gt;  (NOW() - (20 / (24*60*60))),  Text(Status__c) , &#39;Offline&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Player Status</label>
    <type>Text</type>
</CustomField>